--- a/views/show.ejs
+++ b/views/show.ejs
@@ -2,6 +2,6 @@
 <html lang="en">
     <%- include('partials/head.ejs') %>
 <body>
-    <h2>Index Page</h2>
+    <h2>Show Page</h2>
 </body>
 </html>
