added index images

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,32 @@
 <html lang="en">
     <%- include('partials/head.ejs') %>
 <body>
-    <h2>Index Page</h2>
+    <h2>Site Name</h2>
+    <div id= 'brandStatement'>
+        <h3>Brand Statement</h3>
+    </div>
+    <container class ='homeImages'>
+        <div>
+            <img id="homeModel" src="https://images.pexels.com/photos/1043474/pexels-photo-1043474.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Man with a jacket"> 
+        </div>
+        <div>
+            <img id="homeClothesA" src="https://images.pexels.com/photos/5709661/pexels-photo-5709661.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Clothes A">
+        </div>
+        <div>
+            <img id="homeClothesB" src="https://images.pexels.com/photos/2112651/pexels-photo-2112651.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Clothes B">
+        </div>
+        <div>
+            <img id="homeClothesC" src="https://images.pexels.com/photos/4641825/pexels-photo-4641825.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Clothes C">
+        </div> 
+        <style>
+            img  {
+                max-height:20%; 
+                max-width: 20%;
+                border: 1px solid #ddd;
+                border-radius: 4px;
+                padding: 5px;
+            }
+        </style>
+</container>
 </body>
 </html>
