--- a/public/main.css
+++ b/public/main.css
@@ -6,7 +6,24 @@
 	transform: translateY(-5px);
 }
 
-.homeImages {
-    max-height:25%;
-    max-width: 25%;
+.middle{
+	margin-top: 100px;
+}
+
+.layout {
+	display: flex;
+	gap: 4px;
+  }
+
+.homeClothes{
+	max-height: 80%; 
+	max-width: 80%;
+	/* height: 400px;
+	width: 300px; */
+	margin-top: 50px;
+	margin-left: 80px;
+
+	border: 1px solid rgb(150, 148, 148);
+	border-radius: 4px;
+	padding: 5px;
 }
