--- a/views/products/mensware/bottoms/menbottoms.ejs
+++ b/views/products/mensware/bottoms/menbottoms.ejs
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
     <%- include('../../../partials/head.ejs') %>
-    <link rel="stylesheet" href='../../../../mensbottoms.css'>
 <body>
     <center><h1>Men's Bottoms</h1></center>
     <div class = 'directory-path'>
@@ -29,5 +28,6 @@
             <div class = 'col-sm-12 col-lg-1'></div>
         </div>
     </div>
+    <%- include('../../../partials/footer.ejs') %>
 </body>
 </html>
