--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -3,7 +3,7 @@
 <%- include('../partials/head.ejs') %>
 <body class="has-navbar-fixed-top">
 
-    <form action="/login" method="POST">
+    <form action="/" method="POST">
         <div class="form-outline mb-4">
             <input id="email-input" type="email" name="email" class="input"/>
             <label class="form-label" for="email-input">Email</label>
