Rewrote mensbottoms.ejs with a more automated system + some etc. features maybe?

--- a/public/mensbottoms.css
+++ b/public/mensbottoms.css
@@ -1,21 +1,8 @@
 body{
-	background-color: white;
+	background-color: bisque;
 }
 
-#pics{
-	display: inline;
-	align-items: center;
-	padding: 0px 10px;
-}
-
-#prices{
-	transform: translateY(-20px);
-	padding: 0px;
-	margin-top: 0px;
-	border-top: 0px;
-}
-
-#price1{
-	width: 220px;
-	padding: 0px;
+.display-pics{
+	height: 300px;
+	width: 300px;
 }
