--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -5,8 +5,8 @@
 
     <form action="/" method="POST">
         <div class="form-outline mb-4">
-            <input id="email-input" type="email" name="email" class="input"/>
-            <label class="form-label" for="email-input">Email</label>
+            <input id="username-input" type="username" name="username" class="input"/>
+            <label class="form-label" for="username-input">Username</label>
         </div>
         <div class="form-outline mb-4">
             <input id="password-input" type="password" name="password" class="input"/>
