--- a/views/products/mensware/mensware.ejs
+++ b/views/products/mensware/mensware.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%- include('../../../partials/head.ejs') %>
+    <%- include('../../partials/head.ejs') %>
 <body>
-    <center><h1>Men's Tops</h1></center>
+    <center><h1>Men's Clothing</h1></center>
     <div class = 'directory-path'>
-        <a href = '/'>Home</a> > <a href = '/products/mensware'>Mensware</a> > Tops
+        <a href = '/'>Home</a> > <a href = '/products/mensware'>Mensware</a>
     </div>
     <div class = 'container-fluid' id="pics">
         <div class="row justify-content-start flex-wrap">
@@ -16,6 +16,6 @@
         <% } %>
         </div>
     </div>
-    <%- include('../../../partials/footer.ejs') %>
+    <%- include('../../partials/footer.ejs') %>
 </body>
 </html>
