--- a/public/main.css
+++ b/public/main.css
@@ -37,7 +37,8 @@
 
 
 footer {
-	position:relative;
-	bottom:0;
-	width:100%;
- }
+	position: relative;
+	bottom: 0;
+	width: 100%;
+	height: 2.5rem;
+  }
