--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -2,17 +2,16 @@
 <html lang="en">
 <%- include('../partials/head.ejs') %>
 <body class="has-navbar-fixed-top">
-
-    <form action="/" method="POST">
+    <form action="/login" method="POST">
         <div class="form-outline mb-4">
-            <input id="username-input" type="username" name="username" class="input"/>
-            <label class="form-label" for="username-input">Username</label>
+            <input id="email-input" type="email" name="email" class="input"/>
+            <label class="form-label" for="email-input">Email</label>
         </div>
         <div class="form-outline mb-4">
             <input id="password-input" type="password" name="password" class="input"/>
             <label class="form-label" for="password-input">Password</label>
         </div>
-        <button type="button" class="btn btn-primary btn-block mb-4">Sign In</button>
+        <button class="button is-link btn-primary btn-block mb-4">Sign In</button>
         
     </form>
 </body>
