--- a/views/products/mensware/bottoms/menbottomsshow.ejs
+++ b/views/products/mensware/bottoms/menbottomsshow.ejs
@@ -26,6 +26,11 @@
                         <p class="description"><%=Product.description%></p>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <button><a href="/products/<%=Product._id%>/edit">Edit</a></button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
