--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -8,6 +8,20 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../../main.css">
     <link rel="stylesheet" href="../../mensbottoms.css">
+</head>
+    <% if (user) { %>
+        <div class = 'container-fluid'>
+            <nav class = 'nav justify-content-center bg-light text-dark'>
+                <div class = 'col-md-5'><a href = '/' class = 'nav-item nav-link active' id='logo-top-nav'><img src = 'https://cdn-icons-png.flaticon.com/512/7216/7216150.png' height='30' width='30'></a></div>
+                <div class = 'col-md-3'><a href = '#' class = 'nav-item nav-link disabled' id='Title-top-nav'>Marketplace for Clothes</a></div>
+                <div class = 'col-md-1'><a href = '/' class = 'nav-item nav-link active' id='home-top-nav'><%=user.username%></a></div>
+                <div class = 'col-md-1'><a href = '/login/logout' class = 'nav-item nav-link active' id='login-top-nav'>Logout</a></div>
+                <!-- <div class = 'col-md-1'><a href = '/login/register' class = 'nav-item nav-link active' id='signup-top-nav'>Edit</a></div> -->
+                <div class = 'col-md-1'><a href = '#' class = 'nav-item nav-link active' id='bag-top-nav'><img src = 'https://cdn-icons.flaticon.com/png/512/2832/premium/2832495.png?token=exp=1651007708~hmac=9944edfc2c5ef400e64478dbe61fcb49' height='30' width='30' title='My Bag'></a></div>
+            </nav>
+        </div>
+    <%}>
+    <% if (user === 'undefined') {%>
     <div class = 'container-fluid'>
         <nav class = 'nav justify-content-center bg-light text-dark'>
             <div class = 'col-md-5'><a href = '/' class = 'nav-item nav-link active' id='logo-top-nav'><img src = 'https://cdn-icons-png.flaticon.com/512/7216/7216150.png' height='30' width='30'></a></div>
@@ -18,6 +32,7 @@
             <div class = 'col-md-1'><a href = '#' class = 'nav-item nav-link active' id='bag-top-nav'><img src = 'https://cdn-icons.flaticon.com/png/512/2832/premium/2832495.png?token=exp=1651007708~hmac=9944edfc2c5ef400e64478dbe61fcb49' height='30' width='30' title='My Bag'></a></div>
         </nav>
     </div>
+    <%}%>
     <div class = 'container-fluid'>
         <nav class = 'navbar box justify-content-start'>
             <div class="dropdown col-sm-12 col-md-1">
@@ -36,4 +51,4 @@
             </div>
         </nav>
     </div>
-</head>
+
