--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../../main.css">
     <link rel="stylesheet" href="../../mensbottoms.css">
 </head>
+<header>
     <% if (user) { %>
         <div class = 'container-fluid'>
             <nav class = 'nav justify-content-center bg-light text-dark'>
@@ -20,8 +21,8 @@
                 <div class = 'col-md-1'><a href = '#' class = 'nav-item nav-link active' id='bag-top-nav'><img src = 'https://cdn-icons.flaticon.com/png/512/2832/premium/2832495.png?token=exp=1651007708~hmac=9944edfc2c5ef400e64478dbe61fcb49' height='30' width='30' title='My Bag'></a></div>
             </nav>
         </div>
-    <%}>
-    <% if (user === 'undefined') {%>
+    <%}%>
+    <% if (!user) {%>
     <div class = 'container-fluid'>
         <nav class = 'nav justify-content-center bg-light text-dark'>
             <div class = 'col-md-5'><a href = '/' class = 'nav-item nav-link active' id='logo-top-nav'><img src = 'https://cdn-icons-png.flaticon.com/512/7216/7216150.png' height='30' width='30'></a></div>
@@ -51,4 +52,4 @@
             </div>
         </nav>
     </div>
-
+</header>
