--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -7,7 +7,15 @@
 
     <h1>All Items</h1>
     <% for(let i=0; i<Product.length; i++) { %>
-    <div class="allProductPhotos"><img src="<%=Product[i].image%>"/></div>
+        <div class="name"><%= Product[i].name %></div> 
+        <div class="allProductPhotos"><img src="<%=Product[i].image%>"/></div>
+        <div class="stats">Size: <%= Product[i].size %><br />
+            Price: <%= Product[i].price %><br />
+            Condition: <%= Product[i].condition %><br />
+            Description: <%= Product[i].description %><br />
+            Department: <%= Product[i].department %><br />
+            Category: <%= Product[i].category %>
+        </div>
     <%}%>
 </body>
 </html>
