--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -17,7 +17,7 @@
                 <div class = 'col-md-3'><a href = '#' class = 'nav-item nav-link disabled' id='Title-top-nav'>Marketplace for Clothes</a></div>
                 <div class = 'col-md-1'><a href = '/' class = 'nav-item nav-link active' id='home-top-nav'><%=user.username%></a></div>
                 <div class = 'col-md-1'><a href = '/login/logout' class = 'nav-item nav-link active' id='login-top-nav'>Logout</a></div>
-                <!-- <div class = 'col-md-1'><a href = '/login/register' class = 'nav-item nav-link active' id='signup-top-nav'>Edit</a></div> -->
+                <div class = 'col-md-1'><a href = '/products/new' class = 'nav-item nav-link active' id='signup-top-nav'>New</a></div>
                 <div class = 'col-md-1'><a href = '#' class = 'nav-item nav-link active' id='bag-top-nav'><img src = 'https://cdn-icons.flaticon.com/png/512/2832/premium/2832495.png?token=exp=1651007708~hmac=9944edfc2c5ef400e64478dbe61fcb49' height='30' width='30' title='My Bag'></a></div>
             </nav>
         </div>
