--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,19 +8,13 @@
             <div class="col-sm-12 col-md-3 justify-content-end">
                 <h2>Brand Statement</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <a href="http://localhost:4000/#" target="_blank" class="btn btn-success">Start Shopping &raquo;</a>
+                <a href="/products" target="_blank" class="btn btn-success">Start Shopping &raquo;</a>
             </div>
             <div class = "col-sm-12 col-md-4 justify-content-end"></div>
             <div class = "col-sm-12 col-md-2 justify-content-end">
                 <img id="homeModel" src="https://images.pexels.com/photos/6627106/pexels-photo-6627106.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Man with a jacket">
             </div>
             <div class = "col-sm-12 col-md-2 justify-content-end"></div>
-                <style>
-                    #homeModel {
-                        max-height: 600px; 
-                        max-width: 600px;
-                    }
-                </style>
         </div>
     </div>
         <!-- <div> -->
