--- a/public/main.css
+++ b/public/main.css
@@ -22,7 +22,8 @@
 .layout {
 	display: flex;
 	gap: 4px;
-  }
+}
+
 
 .homeClothes{
 	max-height: 80%; 
@@ -47,3 +48,25 @@ footer {
     max-height: 600px; 
     max-width: 600px;
 }
+
+
+/* //////////////// Cart Page /////////////////// */
+
+.layout2 {
+    width: 1366px;
+    height: 768px;
+  
+    display: grid;
+    grid:
+      "header header header" auto
+      "leftSide body rightSide" 1fr
+      "footer footer footer" auto
+      / auto 1fr auto;
+    gap: 8px;
+}
+
+.header { grid-area: header; }
+.leftSide { grid-area: leftSide; }
+.body { grid-area: body; }
+.rightSide { grid-area: rightSide; }
+.footer { grid-area: footer; }
