--- a/views/new.ejs
+++ b/views/new.ejs
@@ -3,6 +3,7 @@
 	<%- include('partials/head.ejs') %>
 	<script src="/scripts/dommanip.js" defer></script>
 <body>
+	<%- include('partials/nav.ejs') %>
 	<h1>New Product</h1>
 	<form method="POST" action="/products" id="newProduct">
 		<div class = container-fluid>
