--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
     <%- include('partials/head.ejs') %>
 <body>
+    <%- include('partials/nav.ejs') %>
     <div class="container-fluid" id="index-header"> 
         <div class="row align-items-center h-100">
             <div class="col-sm-12 col-md-1 justify-content-end"></div>
