--- a/views/products/mensware/bottoms/menbottoms.ejs
+++ b/views/products/mensware/bottoms/menbottoms.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
     <%- include('../../../partials/head.ejs') %>
 <body>
+    <%- include('../../../partials/nav.ejs') %>
     <center><h1>Men's Bottoms</h1></center>
     <div class = 'directory-path'>
         <a href = '/'>Home</a> > <a href = '/products/mensware'>Mensware</a> > Bottoms
@@ -10,7 +11,7 @@
         <div class="row justify-content-start flex-wrap">
         <% for(let i = 0; i < Product.length; i++ ) { %>
                 <div class = 'col-sm-12 col-lg-2'><%= Product[i].name%><br />
-                    <a href="/products/mensware/bottoms/<%=Product[i]._id%>"><img class = 'display-pics' src = '<%= Product[i].image %>'></a><br />
+                    <a href="/products/<%=Product[i]._id%>"><img class = 'display-pics' src = '<%= Product[i].image %>'></a><br />
                 $<%= Product[i].price %></div>
                 <div class = 'col-sm-12 col-lg-1'></div>
         <% } %>
