--- a/views/products/show.ejs
+++ b/views/products/show.ejs
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <%- include('../../../partials/head.ejs') %>
+    <%- include('../partials/head.ejs') %>
 </head>
 <body>
+    <%- include('../partials/nav.ejs') %>
     <div class="container">
         <div class="row">
             <div class="col-md-6">
@@ -41,6 +42,6 @@
             </div>
         </div>
     </div>
-    <%- include('../../../partials/footer.ejs') %>
+    <%- include('../partials/footer.ejs') %>
 </body>
 </html>
