--- a/views/products/womensware/bottoms/womenbottoms.ejs
+++ b/views/products/womensware/bottoms/womenbottoms.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
     <%- include('../../../partials/head.ejs') %>
 <body>
+    <%- include('../../../partials/nav.ejs') %>
     <center><h1>Women's Bottoms</h1></center>
     <div class = 'directory-path'>
         <a href = '/'>Home</a> > <a href = '/products/womensware'>Womensware</a> > Bottoms
@@ -11,7 +12,7 @@
         <% for(let i = 0; i < Product.length; i++ ) { %>
                 <div class = 'col-sm-12 col-lg-2'>
                     <%= Product[i].name%><br />
-                    <a href="/products/womensware/bottoms/<%=Product[i]._id%>"><img class = 'display-pics' src = '<%= Product[i].image %>'></a><br />
+                    <a href="/products/<%=Product[i]._id%>"><img class = 'display-pics' src = '<%= Product[i].image %>'></a><br />
                 $<%= Product[i].price %></div>
                 <div class = 'col-sm-12 col-lg-1'></div>
         <% } %>
