--- a/views/products/womensware/womensware.ejs
+++ b/views/products/womensware/womensware.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
     <%- include('../../partials/head.ejs') %>
 <body>
+    <%- include('../../partials/nav.ejs') %>
     <center><h1>Women's Clothing</h1></center>
     <div class = 'directory-path'>
         <a href = '/'>Home</a> > <a href = '/products/womensware'>Womensware</a>
@@ -10,8 +11,10 @@
         <div class="row justify-content-start flex-wrap">
         <% for(let i = 0; i < Product.length; i++ ) { %>
                 <div class = 'col-sm-12 col-lg-2'><%= Product[i].name%><br />
-                    <img class = 'display-pics' src = '<%= Product[i].image %>'><br />
-                $<%= Product[i].price %></div>
+                    <a href="/products/<%=Product[i]._id%>"><img class = 'display-pics' src = '<%= Product[i].image %>'><br />
+                    $<%= Product[i].price %>
+                    </a>
+                </div>
                 <div class = 'col-sm-12 col-lg-1'></div>
         <% } %>
         </div>
