--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../../main.css">
     <link rel="stylesheet" href="../../mensbottoms.css">
+    <link rel="stylesheet" href="../../cartStyle.css">
 </head>
 <header>
     <% if (user) { %>
