--- a/views/cart/index.ejs
+++ b/views/cart/index.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
   <%- include('../partials/head.ejs') %>
 <body>
+
   <div class="cartContainer">
     <div class=”header”>
         <h2 class=”heading”>Shopping Cart</h2>
@@ -20,7 +21,7 @@
       <div class=”prices”></div>
       </div>
   </div>
+  
 </body>
-
-
+    <%- include('../partials/footer.ejs') %>
 </html>
