--- a/views/new.ejs
+++ b/views/new.ejs
@@ -55,6 +55,9 @@
 						<option value ="Womens">Womens</option>
 					</select>
 				</div>
+				<div>
+					<input name="user" id="user" type="hidden" value="<%=user.id%>"/>
+				</div>
 				<div class = 'col-sm-12 col-md-12'>
 					<input type="submit" value="Submit"/>
 				</div>
