--- a/views/cart/index.ejs
+++ b/views/cart/index.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <%- include('../partials/head.ejs') %>
+  <link rel="stylesheet" href="../../cartStyle.css">
 <body>
 
   <div class="cartContainer">
