--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -5,7 +5,7 @@
 				<p>Copyright &copy; 2021 Site name here</p>
 			</div>
 			<div class="col-md-6 justify-content-start">
-				<a href="#" class="text-dark">Terms of Use</a> 
+				<a id="myModal" class="text-dark">Terms of Use</a> 
 				<span class="text-muted mx-2">|</span> 
 				<a href="#" class="text-dark">Privacy Policy</a>
 				<span class="text-muted mx-2">|</span> 
