--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -2,8 +2,50 @@
 <html lang="en">
 <%- include('../partials/head.ejs') %>
 <body class="has-navbar-fixed-top">
-    <form action="/login" method="POST">
-        <div class="form-outline mb-4">
+    <%- include('../partials/nav.ejs') %>
+    <div class="tab-content">
+        <div class="tab-pane fade show active" id="pills-login" role="tabpanel" aria-labelledby="tab-login">
+            <form action="/login" method="POST">
+                <div class="text-center mb-3">
+                    <p>Sign in with:</p>
+                    <button type="button" class="btn btn-link btn-floating mx-1">
+                        <i class="fab fa-facebook-f"></i>
+                      </button>
+              
+                      <button type="button" class="btn btn-link btn-floating mx-1">
+                        <i class="fab fa-google"></i>
+                      </button>
+              
+                      <button type="button" class="btn btn-link btn-floating mx-1">
+                        <i class="fab fa-twitter"></i>
+                      </button>
+              
+                      <button type="button" class="btn btn-link btn-floating mx-1">
+                        <i class="fab fa-github"></i>
+                      </button>
+                </div>
+                <p class="text-center">or:</p>
+                <div class="form-outline mb-4">
+                    <label class="form-label" for="loginName">Email:</label>
+                    <input type="email" id="loginName" class="form-control" name="email"/>
+                </div>
+                <div class="form-outline mb-4">
+                    <input type="password" id="registerPassword" class="form-control" name="password"/>
+                    <label class="form-label" for="registerPassword">Password</label>
+                </div>
+                <div class="form-check d-flex justify-content-center mb-4">
+                    <input class="form-check-input me-2" type="checkbox" value="" id="registerCheck" checked
+                      aria-describedby="registerCheckHelpText" />
+                    <label class="form-check-label" for="registerCheck">
+                      I have read and agree to the terms
+                    </label>
+                </div>
+                <button type="submit" class="btn btn-primary btn-block mb-3">Sign in</button>
+            </form>
+        </div>
+    </div>
+
+        <!-- <div class="form-outline mb-4">
             <input id="email-input" type="email" name="email" class="input"/>
             <label class="form-label" for="email-input">Email</label>
         </div>
@@ -12,7 +54,6 @@
             <label class="form-label" for="password-input">Password</label>
         </div>
         <button class="button is-link btn-primary btn-block mb-4">Sign In</button>
-        
-    </form>
+    -->
 </body>
 </html>
