--- a/views/products/show.ejs
+++ b/views/products/show.ejs
@@ -27,12 +27,17 @@
                         <p class="description"><%=Product.description%></p>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-md-12 bottom-rule">
+                        <h2 class="product-price">$<%=Product.price%></h2>
+                    </div>
+                </div>
                 <% if (user) {%>
                 <div class="row">
                     <div class="col-md-12">
-                        <button><a href="/products/<%=Product._id%>/edit">Edit</a></button>
-                    </div>
-                    <div class="col-md-12">
+                        <form action="/products/<%=Product._id%>/edit">
+                            <input type="submit" value="Edit">
+                        </form>
                         <form action="/products/<%=Product._id%>?_method=DELETE" method="POST">
                             <input type="submit" value="Delete Item" />
                         </form>
