added links to images and changed font

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,13 +7,13 @@
         <div class="row align-items-center h-100">
             <div class="col-sm-12 col-md-1 justify-content-end"></div>
             <div class="col-sm-12 col-md-3 justify-content-end">
-                <h2>Brand Statement</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <h2>Welcome</h2>
+                <p>The one-stop destination for buying, selling, and exploring fashion.</p>
                 <a href="/products" target="_blank" class="btn btn-success">Start Shopping &raquo;</a>
             </div>
-            <div class = "col-sm-12 col-md-4 justify-content-end"></div>
+            <div class = "col-sm-12 col-md-2 justify-content-end"></div>
             <div class = "col-sm-12 col-md-2 justify-content-end">
-                <img id="homeModel" src="https://images.pexels.com/photos/6627106/pexels-photo-6627106.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Man with a jacket">
+                <img id="homeModel" src="https://images.pexels.com/photos/7365335/pexels-photo-7365335.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Brand Image">
             </div>
             <div class = "col-sm-12 col-md-2 justify-content-end"></div>
         </div>
@@ -25,12 +25,23 @@
         <!-- </div> -->
     <hr>
         <div class="container-fluid">
+            <h3>Shop By Category</h3>
             <div class="row align-items-center h-100">
-                <div class = 'col-sm-12 col-md-4 justify-content-center'><img class="homeClothes" src="https://images.pexels.com/photos/5709661/pexels-photo-5709661.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Clothes A">
+                <div class = 'col-sm-12 col-md-3 justify-content-center'>
+                    <a href='/products/mensware/tops/'><img class="homeClothes" src="https://images.pexels.com/photos/2112651/pexels-photo-2112651.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Men Tops"></a>
+                    <h5> Men's Tops</h5>
                 </div>
-                <div class = 'col-sm-12 col-md-4 justify-content-center'><img class="homeClothes" src="https://images.pexels.com/photos/2112651/pexels-photo-2112651.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Clothes B">
+                <div class = 'col-sm-12 col-md-3 justify-content-center'>
+                    <a href='/products/mensware/bottoms/'><img class="homeClothes" src="https://images.pexels.com/photos/2897533/pexels-photo-2897533.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Men Bottoms"></a>
+                    <h5> Men's Bottoms</h5>
                 </div>
-                <div class = 'col-sm-12 col-md-4 justify-content-center'><img class="homeClothes" src="https://images.pexels.com/photos/4641825/pexels-photo-4641825.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Clothes C">
+                <div class = 'col-sm-12 col-md-3 justify-content-center'>
+                    <a href='/products/womensware/tops/'><img class="homeClothes" src="https://images.pexels.com/photos/4641825/pexels-photo-4641825.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Women Tops"></a>
+                    <h5> Women's Tops</h5>
+                </div> 
+                <div class = 'col-sm-12 col-md-3 justify-content-center'>
+                    <a href='/products/womensware/bottoms/'><img class="homeClothes" src="https://images.pexels.com/photos/1138560/pexels-photo-1138560.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Women Bottoms"></a>
+                    <h5> Women's Bottoms</h5>
                 </div> 
         </div>
     </div>
