--- a/public/main.css
+++ b/public/main.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap');
+
 body{
 	background-color: bisque;
+	font-family: 'Inter';
 }
 
 .display-pics{
@@ -35,16 +38,24 @@ body{
 
 
 .homeClothes{
-	max-height: 80%; 
-	max-width: 80%;
-	margin-top: 50px;
-	margin-left: 80px;
+	max-height: 70%; 
+	max-width: 70%;
+	margin-top: 40px;
+	margin-left: 20px;
 
 	border: 1px solid rgb(150, 148, 148);
 	border-radius: 4px;
 	padding: 5px;
 }
 
+#homeModel {
+	max-height: 600px; 
+    max-width: 600px;
+
+	border: 1px solid rgb(150, 148, 148);
+	border-radius: 4px;
+	padding: 5px;
+}
 
 footer {
 	position: relative;
@@ -52,8 +63,3 @@ footer {
 	width: 100%;
 	height: 2.5rem;
   }
-
-  #homeModel {
-    max-height: 600px; 
-    max-width: 600px;
-}
