--- a/public/main.css
+++ b/public/main.css
@@ -58,8 +58,10 @@ body{
 }
 
 footer {
+	margin-top: 50px;
 	position: relative;
 	bottom: 0;
 	width: 100%;
 	height: 2.5rem;
+	background-color: whitesmoke;
   }
